fixed height and vertical alignment of spinner and error message inr esults table on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,17 @@
 
 /* Text Styling end */
 
+/* Vertical Center Start */
+
+.vertical-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Vertical Center end */
+
 /* Content Wrappers start */
 
 .content-wrapper {
@@ -663,14 +674,14 @@
 
 /* Results table start */
 
-.spinner {
-  margin: auto;
+.results-height {
+  height: 480px;
 }
 
 #resultsTable {
   display: block;
   overflow: scroll;
-  max-height: 480px;
+  height: 480px;
   margin-bottom: 0px;
 }
 
